--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "marmitop_back",
+  "name": "setup",
   "version": "1.0.0",
   "description": "",
   "main": "dist/index.js",
@@ -19,6 +19,7 @@
     "typescript": "^5.2.2"
   },
   "dependencies": {
+    "body-parser": "^1.20.2",
     "cors": "^2.8.5",
     "express": "^4.18.2"
   }
