--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "@types/node": "^20.6.0",
     "concurrently": "^8.2.1",
     "nodemon": "^3.0.1",
-    "typescript": "^5.2.2"
+    "typescript": "^5.2.2",
+    "vitest": "^1.1.1"
   },
   "dependencies": {
     "body-parser": "^1.20.2",
